--- a/app/views/parks/index.html.erb
+++ b/app/views/parks/index.html.erb
@@ -1,5 +1,5 @@
-<h3>Total Number of Parks Found: <%= @parks.count %></h3>
-<% @parks.each do |park| %>
+<h3>Total Number of Parks Found: <%= @facade.parks.count %></h3>
+<% @facade.parks.each do |park| %>
   <div class="park">
     <div class="name"><h2>Park Name: <%= park.full_name %></h2></div>
     <div class="description"><b>Description: </b> <%= park.description %></div></br>
